--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start -p process.env.PORT || 5000"
+    "start": "next start -p $PORT" 
   },
   "dependencies": {
     "next": "10.0.1",
