--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start -p $PORT" 
+    "start": "next start -p $PORT"
   },
   "dependencies": {
     "next": "10.0.1",
@@ -15,6 +15,12 @@
   "devDependencies": {
     "@types/node": "^14.14.6",
     "@types/react": "^16.9.56",
+    "@typescript-eslint/eslint-plugin": "^4.6.1",
+    "@typescript-eslint/parser": "^4.6.1",
+    "eslint": "^7.13.0",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "prettier": "^2.1.2",
     "typescript": "^4.0.5"
   }
 }
